--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,16 @@ body {
     background: #FFFFFF;
     margin: 0;
     padding: 0;
+    height: 100%;
+}
+
+#root {
+    height: 100%;
+    width: 100%;
+}
+
+html {
+    height: 100%;
 }
 
 input::-webkit-outer-spin-button,
